--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+.box-shadow-default {
+  box-shadow: 0 0px 60px rgba(0, 0, 0, 0.06);
+}
+
 summary::-webkit-details-marker {
   display: none
 }
@@ -39,4 +43,14 @@ summary::-webkit-details-marker {
 .nav-link:hover::before {
   width: 100%;
   border-radius: 50%;
+}
+
+/* Hide scrollbar while keeping scrollability */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar { 
+  display: none;  /* Safari and Chrome */
 }
